@@ -1,3 +1,8 @@
+2011-07-13  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
+	Protect pad's info with lock (called from different gst threads)
+
 2011-05-30  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/muxers/fmp4/fmp4.py:
